<resources>
    <string name="test_string">Lorem Ipsum is simply dummy text of the printing  into electronic ining Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="empty_mobile_num_error">Please enter Mobile Number!</string>
    <string name="join_popup_text">Join</string>
    <string name="join_popup_student">Student</string>
    <string name="join_popup_teacher">Teacher</string>
    <string name="join_popup_parents">Parents</string>
    <string name="join_popup_alumni">Alumni</string>
    <string name="join_text2">Fill up this information</string>
    <string name="share_text">Choose where you want to share...</string>
    <string name="setting_drawer_basic_info_text">Basic Information</string>
    <string name="setting_drawer_title_text">Info \u0026 Setting</string>
    <string name="setting_drawer_account_text">Account Settings</string>
    <string name="setting_drawer_pref_text">Preference Settings</string>
    <string name="setting_drawer_faq_text">Frequently Asked Questions</string>
    <string name="setting_drawer_profile_text">Edit Profile</string>
    <string name="setting_drawer_term_text">Terms \u0026 Policy</string>
    <string name="setting_drawer_assessment_text">Assessment Scores</string>
    <string name="setting_drawer_logout_text">Log Out</string>
    <string name="setting_drawer_about_us_text">About Us</string>
    <string name="setting_drawer_current_password_hint_text">Current password</string>
    <string name="setting_drawer_new_password_hint_text">New password</string>
    <string name="setting_drawer_retype_password_hint_text">Retype password</string>
    <string name="progress_message">Signing in to Google&#8230;</string>
    <string name="app_name">Champs21</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_homework">Homework assigned by </string>
    <string name="hint_username">Email/Username</string>
    <string name="hint_password">Password</string>
    <string name="text_loading">Loading...</string>
    <string-array name="free_settings_images">
        <item>about_us</item>
        <item>terms_and_policy</item>
    </string-array>
    <string-array name="free_settings_text">
        <item>About Us</item>
        <item>Terms \u0026 Policy</item>
    </string-array>
    <string-array name="free_settings_images_log_in">
        <item>account_settings</item>
        <item>preference</item>
        <item>profile_edit</item>
        <item>about_us</item>
        <item>terms_and_policy</item>
    </string-array>
    <string-array name="free_settings_text_log_in">
        <item>Account Settings</item>
        <item>Preference Settings</item>
        <item>Edit Profile</item>
        <item>About Us</item>
        <item>Terms \u0026 Policy</item>
    </string-array>
    <string-array name="diary_images_student">
        <item>home</item>
        <item>diary_icon</item>
        <item>homework</item>
        <item>quiz</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>academic_calendar</item>
        <item>transport</item>
    </string-array>
    <string-array name="diary_class_student">
        <item>home</item>.
        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>QuizFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>
        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
    </string-array>
    <string-array name="diary_text_student">
        <item>home</item>
        <item>School Feed</item>
        <item>Homework</item>
        <item>Quiz</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Reportcard</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
    </string-array>
    <string-array name="diary_images_parents">
        <item>home</item>
        <item>diary_icon</item>
        <item>homework</item>
        <item>quiz</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>event</item>
        <item>attendance</item>
        <item>routine</item>
        <item>exam_routine</item>
        <item>reportcard</item>
        <item>meetingrequest</item>
        <item>academic_calendar</item>
        <item>transport</item>
        <item>leaveapplication</item>
        <item>fees</item>
    </string-array>
    <string-array name="diary_text_parents">
        <item>home</item>
        <item>School Feed</item>
        <item>Homework</item>
        <item>Quiz</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Event</item>
        <item>Attendance</item>
        <item>Routine</item>
        <item>Exam Routine</item>
        <item>Reportcard</item>
        <item>Meeting Request</item>
        <item>Academic Calendar</item>
        <item>Transport</item>
        <item>Leave Application</item>
        <item>Fees</item>
    </string-array>
    <string-array name="diary_class_parents">
        <item>home</item>
        <item>SchoolFeedFragment</item>
        <item>HomeworkFragment</item>
        <item>QuizFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>
        <item>ParentEventFragment</item>
        <item>ParentAttendenceFragment</item>
        <item>StudentClassRoutineFragment</item>
        <item>ExamRoutineFragmentAll</item>
        <item>ParentReportCardFragment</item>
        <item>MeetingFragment</item>
        <item>ParentAcademicCalender</item>
        <item>TransportFragment</item>
        <item>ApplyForLeaveFragment</item>
        <item>FeesTabhostFragment</item>
    </string-array>
    <string-array name="diary_images_teacher">
        <item>home</item>
        <item>diary_icon</item>
        <item>attendance</item>
        <item>homework</item>
        <item>routine</item>
        <item>notice</item>
        <item>syllabus</item>
        <item>student_list</item>
        <item>leaveapplication</item>
        <item>meetingrequest</item>
        <item>event</item>
        <item>transport</item>
        <item>reportcard</item>
        <item>academic_calendar</item>
    </string-array>
    <string-array name="diary_text_teacher">
        <item>home</item>
        <item>School Feed</item>
        <item>Attendance</item>
        <item>Homework</item>
        <item>Routine</item>
        <item>Notice</item>
        <item>Syllabus</item>
        <item>Student List</item>
        <item>Leave Application</item>
        <item>Meeting Request</item>
        <item>Events</item>
        <item>Transport</item>
        <item>Reportcard</item>
        <item>Academic Calendar</item>
    </string-array>
    <string-array name="diary_class_teacher">
        <item>home</item>
        <item>SchoolFeedFragment</item>
        <item>TeachersAttendanceTabhostFragment</item>
        <item>TeacherHomeWorkFragment</item>
        <item>TeacherRoutineFragment</item>
        <item>NoticeFragmentNew</item>
        <item>SyllabusFragment</item>
        <item>StudentListFragment</item>
        <item>ApplyForLeaveFragment</item>
        <item>MeetingFragment</item>
        <item>ParentEventFragment</item>
        <item>TransportFragment</item>
        <item>ParentReportCardFragment</item>
        <item>ParentAcademicCalender</item>
    </string-array>
    <string-array name="free_menus_images">
        <item>resource</item>
        <item>newsarticle</item>
        <item>entertainment</item>
        <item>sports</item>
        <item>game</item>
        <item>eca</item>
        <item>fitness</item>
        <item>food</item>
        <item>travel</item>
        <item>personality</item>
        <item>literature</item>
        
    </string-array>
    <string-array name="free_menus_text">
        <item>Resource Centre</item>
        <item>News \u0026 Articles</item>
        <item>Entertainment</item>
        <item>Sports</item>
        <item>Games</item>
        <item>Extra Curricular</item>
        <item>Fitness \u0026 Health</item>
        <item>Food \u0026 Nutrition</item>
        <item>Travel</item>
        <item>Personality</item>
        <item>Literature</item>
        
    </string-array>
    <string-array name="free_menus_id">
        <item>6</item>
        <item>38</item>
        <item>3</item>
        <item>47</item>
        <item>1</item>
        <item>5</item>
        <item>2</item>
        <item>4</item>
        <item>36</item>
        <item>37</item>
        <item>48</item>
        
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="login_failed_text">Log in failed.</string>
    <string name="fb_app_id">850059515022967</string>
    <string name="fb_app_namespace">champs_schoolapp</string>
    <string name="not_logged_in_msg">This feature is only for registered users.\n\nPlease register with us and get many other interesting features.</string>
    <string name="candle_msg">This is where you make your voice heard. Candle lets users to publish their articles and give feedback.\n</string>
    <string name="school_msg">Join your school\'s page today and stay connected!
Get updates on recent on goings and feeds from your school teachers.</string>
    <string name="good_read_msg">Save and collect articles that you like using \'Good Read\' feature.\n</string>
    <string name="read_later_msg">We know how busy you are. Use \'Read Later\' to save interesting articles to read them later at a more convenient time.\n</string>
    <string name="wow_msg">We love that you love our content but this feature is only for registered users. Please register with us and get many more interesting features.</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="btn_reminder">Reminder</string>
    <string name="btn_previous">Previous</string>
    <string name="tab_homework">Homework</string>
    <string name="tab_project">Project</string>
    <string name="tab_assessment">Quiz</string>
    <string name="due_payment_deadline_text">Deadline: %1$s</string>
    <string name="percent_text">Percent</string>
    <string name="total_class_text">Total Class</string>
    <string name="present_text">Present</string>
    <string name="absent_text">Absent</string>
    <string name="leave_text">Leave</string>
    <string name="late_text">Late</string>
    <string name="holiday_text">Holiday</string>
    <string name="title_monthly_attendance_tab">Monthly Attendance Report</string>
    <string name="title_yearly_attendance_tab">Yearly Attendance Report</string>
    <string name="title_roll_call_tab">Roll Call</string>
    <string name="title_class_report_tab">Class Report</string>
    <string name="title_student_report_tab">Student Report</string>
    <string name="yearly_attendance_report_title_text">Attendance status till %1$s</string>
    <string name="title_exam_calendar_tab">Exam</string>
    <string name="title_events_calendar_tab">Events</string>
    <string name="tab_notice_general">All</string>
    <string name="tab_notice_circular">Academic</string>
    <string name="tab_notice_announcement">Extra-Academic</string>
    <string name="loading_text">Loading...</string>
</resources>