<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.champs21.schoolapp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/homework_icon_bangla" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="@string/tv_homework"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/tv_teacher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Russel Sir"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tv_subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dip"
                    android:text="25/07/2014"
                    android:textColor="@color/gray_1" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_homework_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dip" >

        <com.champs21.schoolapp.viewhelpers.ExpandableTextView
            android:id="@+id/tv_lesson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/gray_2" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <com.champs21.schoolapp.viewhelpers.CustomButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/general_btn"
            android:clickable="true"
            android:gravity="center"
            custom:iconImage="@drawable/done_normal"
            custom:iconText="@string/btn_done" />

        <LinearLayout
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" >
        </LinearLayout>

        <com.champs21.schoolapp.viewhelpers.CustomButton
            android:id="@+id/btn_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/general_btn"
            android:clickable="true"
            android:gravity="center"
            custom:iconImage="@drawable/btn_reminder_normal"
            custom:iconText="@string/btn_reminder" />

        <LinearLayout
            android:layout_width="2dip"
            android:layout_height="match_parent"
            android:background="@color/gray_2" >
        </LinearLayout>

        <com.champs21.schoolapp.viewhelpers.CustomButton
            android:id="@+id/btn_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/general_btn"
            android:clickable="true"
            android:gravity="center"
            custom:iconImage="@drawable/previous_normal"
            custom:iconText="@string/btn_previous" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dip"
        android:background="@drawable/red_line" >
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dip"
        android:background="@color/gray_bg" >
    </LinearLayout>

</LinearLayout>